--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
 spring.application.name=main
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/companydb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Keycloak
+keycloak.realm=company-access
+keycloak.auth-server-url=http://localhost:8180
+keycloak.resource=spring-app
+keycloak.credentials.secret=GFVilk6S6hL366yuVM39iTrpBZn7CbHJ
+keycloak.bearer-only=true
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/realms/company-access
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+logging.level.com.accesscontroll.main=DEBUG
